<resources>
    <string name="app_name">Bcompanion</string>
    <string name="phone_number">Введите номер телефона</string>
    <string name="enter_code">Введите код</string>
    <string name="send_button">Отправить</string>
    <string name="verification_error">Error in verification</string>
    <string name="signin_error">Sign in failed</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up_button">Зарегестрироваться</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date_of_birth">Дата рождения (дд-мм-гггг)</string>
    <string name="city">Город</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_message">Уже есть аккаунт?</string>
    <string name="go_to_sign_in"><u>Войти</u></string>
    <string name="sign_in"><b>Войти</b></string>
    <string name="go_to_sign_up"><u>Зарегестрироваться</u></string>
    <string name="fill_fields">Fill all fields</string>
    <string name="title_activity_sign_in">Войти</string>
    <string name="message">Мы отправили код на ваш номер телефона. Введите его чтобы подтвердить номер телефона</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="send_code">Отправить</string>
    <string name="menu_send_action">Отправить</string>
    <string name="contact_us_text"><b><i>Связаться с нами.</i></b>\n\nМы готовы ответить на ваши вопросы о нашем сервисе. Пожалуйста сообщите нам если вы найдете ошибку или если у вас есть предложения для улучшения.</string>
    <string name="contact_us_message_text">Сообщение</string>
    <string name="contact_us_btn_text">Отправить</string>
    <string name="title_activity_places">Places</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_place">Place</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_us">Application Bcompanion is designed to help people find a companion for trip to natural places in Kazakhstan, that is, using Bcompanion, users can find people who are like them are going to visit a particular place and go with them together. User choose some location for trip and create group. If other users want to trip with user, they will join to group.
In our days, we don’t have any mobile application and have several websites that people use to find companions. And also, residents of the cities were not in the mountains although they live nearby. For example, Almaty. Even nature near Almaty is wonderful, people do not trip, maybe they are alone, and can’t find companions or don’t know attractive places that can visit with the compa-ny.
Bcompanion consist from website and mobile application. The purpose of our system is to increase interest in people and will be able to help them find and visit the unusual and beautiful places of the city.</string>

    <string name="bao_desc">Большое Алматинское озеро расположено на высоте 2510 м. над уровнем моря. Оно образованно мореной (геологическим мусором), мощного ледника, перегорадившего ущелье во времена Великих оледенений.

Длина, ширина и глубина озера сильно зависят от его уровня, а уровень - от состояния гидроэнергетики и жажды горожан. Ведь БАО – это  уже почти что водохранилище. Естественная плотина озера наращена искусственной.  И запакована в бетон. Получилось что-то вроде огромной ванны с пробкой, выдернув которую можно вообще спустить всю воду. Озеро, таким образом, выливается через дырку и мчится по знаменитой трубе чего-то раскручивать, кого-то поить (а кого-то кормить).

Потому – параметры БАО трудноопределимы. Но при площади зеркала в 0,42 кв. км и объеме воды 8,3 млн. кубометров, глубина  составляет что-то около 40 метров. Температура воды в озере никогда не бывает выше 13 градусов по Цельсию.

Вода обычно мутная, с очень изменчивым цветом, зависящим от состояния погоды. Когда прекращается таяние высокогорного снега, озеро становится прозрачным, как слеза девственницы. Если в это время, при ясном небе, нагрянут морозы, то осторожно выйдя на чистый лед, можно зависнуть над бездной (невыразимое ощущение).

На юге, за озером, ущелье замыкает белоснежный пик Озерный (4110), а чуть восточнее, за разрушенным гребнем - пик Советов (4100). Так, по крайней мере, кажется. На самом деле, ничего они не замыкают - выше по ущелью  целый мир, состоящий из альпийских лугов, морен, ледников и вершин-четырёхтысячников. (Однако попасть туда ныне не очень просто – доблестная пограничная стража РК решила, что делать там туристам особо нечего и перекрыла дорогу.)</string>
    <string name="roads">Из Алматы отправляются в горы автобусы № 12 и 28. Конечная остановка автобуса №12 находится по проспекту Достык напротив гостиницы «Казахстан», а автобуса №28 — у Парка Первого Президента (проспект Аль-Фараби). Стоимость одного билета — 80 тенге. Вам доступны 7 маршрутов от автобуса № 12 и от автобуса № 28 — 3 маршрута. Сезон походов — с мая по октябрь.
Первый маршрут участка маршрута Кимасар проходит по автомобильной дороге. Затем идет по тропе, которая начинается на 1,5 км между домами. Подъем по ущелью проходит через березовую рощу. Перевал Кимасар соединяет ущелья Бутаковское и Малое Алматинское.
Второй маршрут проходит по главной долине вдоль реки, на которой есть водопад. После водопада подъем на склон и поворот направо. Спускаемся к домику Ленина. После отдыха возвращаемся по реке Кимасар к Медео.</string>
    <string name="tips_text">
        <b>Правила похода:</b> \n
Не обгонять проводника, есть риск пойти не туда и потеряться;
Не забудьте море горячего чая и рюкзаки с вкусной едой
Держаться рядом с группой, не отходить от группы в одиночку;
Придерживаться предложенного плана;
Быть вовремя на месте встречи
\n<b>Как одеваться:</b>\n
Одевайтесь потеплее: теплая куртка, зимние ботинки, теплые штанишки, шапка, перчатки, свитер.
обувь желательно иметь приспособленную к горам, т.е. не промокающую и с плотной подошвой, зимнюю обувь (трекинговые ботинки)
теплая куртка и штаны;
головной убор и перчатки;
Гамаши (фонарики/бахилы), солнцезащитные очки;
\n<b>Варианты по питанию:</b>\n
Термос с чаем;
1 л. питьевой воды;
Бутерброды, по возможности – любые другие вкусности.
\n<b>По медикаментам:</b>\n
Обезболивающие средства; необходимое именно Вам лекарство (например, от аллергии);

    </string>

    <string-array name="cities">
        <item>Aktau</item>
        <item>Aktobe</item>
        <item>Almaty</item>
        <item>Balqash</item>
        <item>Kentau</item>
        <item>Kokshetau</item>
        <item>Semey</item>
        <item>Taldykorgan</item>
        <item>Taraz</item>
        <item>Talgar</item>
        <item>Shymkent</item>
        <item>Ekibastuz</item>
        <item>Oral</item>
        <item>Oskemen</item>
    </string-array>

</resources>
