<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/sign_in"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/textInput"
        android:nextFocusDown="@id/surname"
        android:backgroundTint="@color/bgtint"
        />
    <EditText
        android:id="@+id/surname"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        style="@style/textInput"
        android:nextFocusDown="@id/date_of_birth"
        android:backgroundTint="@color/bgtint"
        />
    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        style="@style/textInput"
        android:nextFocusDown="@id/city"
        android:backgroundTint="@color/bgtint"
    />
    <EditText
        android:id="@+id/city"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        style="@style/textInput"
        android:nextFocusDown="@id/sign_up_phone_number"
        android:backgroundTint="@color/bgtint"
        />
    <EditText
        android:id="@+id/sign_up_phone_number"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        style="@style/textInput"
        android:backgroundTint="@color/bgtint"
        />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/sign_up"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        android:background="@color/auth_btn_color"
        />
    <TextView
        android:id="@+id/sign_in_message"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in_message"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/go_to_sign_in"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/go_to_sign_in"
        android:textColor="@color/white"
        />

</LinearLayout>