<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CheckPhoneNumber">

    <TextView
        android:id="@+id/message"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:text="@string/message"
        />
    <EditText
        android:id="@+id/code"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_code"
        />
    <Button
        android:id="@+id/send_code"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        />

</LinearLayout>