<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in"
    tools:context=".SignIn">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="123dp"
        android:layout_height="116dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/sign_in_phone_number"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="@dimen/drawable_padding"
        style="@style/textInput"
        android:textSize="17dp"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="12dp"
        android:background="@color/auth_btn_color"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/go_to_sign_up"
        android:layout_width="@dimen/text_field_length"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/go_to_sign_up"
        android:textColor="#FFFFFF"
        />
</LinearLayout>

</RelativeLayout>